# Sylvanshine

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  DUELYST_ASSET_FORMAT_SPEC.md  KANBAN.md  Makefile  NOTICE.md  SDL_GPU_MIGRATION_STATUS.md  TASKS_ANNOTATED.md  build.fish  build_assets.py  build_msdf.fish  compile_shaders.sh  pyproject.toml  unit_viewer.py  vcpkg.json
app/: sdk.coffee
docs/: ANIMATION_SYSTEM.md  ASSET_FORMAT_TIMING_ADDENDUM.md  ASSET_ORGANIZATION.md  DUELYST_ASSETS.md  DUELYST_FX_KNOWLEDGE.md  DUELYST_RENDERING_PIPELINE_HANDOFF.md  DUELYST_SELECTION_BEHAVIOR.md  DUELYST_SHADOW_EXACT_SPEC.md  DUELYST_SHADOW_LIGHTING_SPEC.md  ENEMY_VISUAL_INDICATORS_AUDIT.md  ENEMY_VISUAL_INDICATORS_IMPL_PLAN.md  ENEMY_VISUAL_INDICATORS_VERIFICATION.md  GRID_PERSPECTIVE_SPEC.md  HIGHLIGHT_BUGS.md  KANBAN.md  LIGHTING.md  LIGHTING_REFACTOR_PLAN.md  SDF_SHADOW_DEBUG_PLAN.md  SDF_SHADOW_ORIENTATION_HANDOFF.md  SDL3_TACTICS_CONTEXT.md  SHADOWS.md  SHADOW_COMPARISON_ANALYSIS.md  SHADOW_COMPLETENESS_TEST.md  SHADOW_IMPLEMENTATION_HANDOFF.md  SHADOW_LIGHTING_HANDOFF.md  SHADOW_SYSTEM_REPLACEMENT_GUIDE.md  SOUND_SYSTEM.md  TASKS.md  TIMING_SYSTEM_SPEC.md  VISUAL_FRAMEWORK.md  background_rendering_plan.md  basic_menu_colors.md  design_iteration.txt  duelyst_fx_implementation_guide.md  duelyst_implementation_differences.md  enemy_turn_visualization_spec.md  enemy_visual_indicators_spec.md  grid_phase6_plan.md  grid_phase7_implementation.md  grid_phase7_plan.md  (+8 more)
duelyst_analysis/: README.md  exports.tsv  extract_semantic.js  files.tsv  imports.tsv  referenced_by.tsv  references_to.tsv  system_interactions.md
include/: animation.h  animation_loader.hpp  animation_player.hpp  asset_manager.hpp  asset_paths.hpp  board.h  board_renderer.hpp  entity.hpp  fx.h  fx.hpp  fx_composition_resolver.hpp  fx_system.hpp  game_logic.hpp  game_state.hpp  gpu_renderer.hpp  grid.hpp  grid_renderer.hpp  input.h  input.hpp  lighting.hpp  lighting_presets.hpp  perspective.hpp  plist_parser.hpp  render.h  render_pass.hpp  renderer.hpp  scene_render.hpp  sdl_handles.hpp  settings_menu.hpp  shader.hpp  sprite_batch.hpp  sprite_properties.hpp  text_renderer.hpp  texture_atlas.hpp  timing_loader.hpp  types.h  types.hpp  unit.h  unit.hpp
ported/: .extraction_checkpoint.json
shaders/: bloom.frag  blur.frag  color.vert  copy.frag  depth.frag  depth.vert  dissolve.frag  fullscreen.vert  highpass.frag  lighting.frag  lighting.vert  lit_sprite.frag  msdf_text.frag  msdf_text.vert  radial_blur.frag  sdf_shadow.frag  sdf_shadow.vert  shadow.frag  shadow.vert  shadow_perpass.frag  sprite.frag  sprite.vert  surface_composite.frag  tone_curve.frag  vignette.frag
src/: animation.c  animation_loader.cpp  animation_player.cpp  asset_manager.cpp  asset_paths.cpp  board.c  board_renderer.cpp  entity.cpp  fx.c  fx.cpp  fx_composition_resolver.cpp  fx_system.cpp  game_logic.cpp  game_state.cpp  gpu_renderer.cpp  grid.cpp  grid_renderer.cpp  input.c  input.cpp  lighting_presets.cpp  main.c  main.cpp  perspective.cpp  plist_parser.cpp  render.c  render_pass.cpp  renderer.cpp  scene_render.cpp  settings_menu.cpp  shader.cpp  sprite_batch.cpp  text_renderer.cpp  texture_atlas.cpp  timing_loader.cpp  unit.c  (+2 more)
(+2654 files in other folders)
